--- a/PILING_PELIKULA - EVOLUTION/PILING._.PELIKULA.csproj
+++ b/PILING_PELIKULA - EVOLUTION/PILING._.PELIKULA.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>PILING_PELIKULA___EVOLUTION</RootNamespace>
+    <RootNamespace>PILING._.PELIKULA</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
